# CollageMaker

./: .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  cellContour.ts  contour.test.ts  contour.ts  export.ts  fonts.ts  index.css  layouts.ts  main.tsx  photoFraming.test.ts  photoFraming.ts  settingsStore.ts  shape.test.ts  shape.ts  shapeCollage.test.ts  shapeCollage.ts  smartFrame.ts  types.ts  userShapes.test.ts  userShapes.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CollageStage.tsx  ControlsPanel.tsx  ExportModal.tsx  FrameEditorModal.tsx  Header.tsx  ImageDropper.tsx  LayoutPicker.tsx  LogoMark.tsx  PhotoSlot.tsx  ProfileLibrary.tsx  ShapeBrowser.tsx  ShapeStage.tsx  StageBar.tsx  TextEditor.tsx  Toolbar.tsx
src/shapes/: library.ts
src/views/: GridCollage.tsx  ShapeCollage.tsx
