[package]
name = "collage-maker"
version = "0.2.1"
description = "Vexel-style photo mosaics in any shape"
authors = ["you"]
edition = "2021"

[lib]
name = "collage_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
